2003-10-03  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b119

	* CHANGE: Position of .po files changed,
	          available Languages are only those who are found correctly in locale folder

	* NEW: .po and .mo files are now splitted

	* Change: call and return of sanityCheck()

	* Change: New Report

	* Languages: Update German (de_DE), Traditional Chinese (zh_TW), Swedish (sv_SE), Bulgarian (bg_BG)

2003-10-01 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b118

	* Some bug fixes, some warning reduction and lots of validation 
	  stuff.  Will merge into SKINS branch.

	* No pulldowns in offline mode.

	* Frames should work correctly in offline mode.

	* Validation stuff:
		- added DOCTYPE
		- replace "&" with "&amp;"

2003-10-01 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b117

	* A check in of changes that won't affect the skins stuff, as the 
	  directory (layout) doesn't exist in that branch

	* Mods for w3c validation.

2003-10-01 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b116

	* Missing functions required by previous checkin.

2003-10-01 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b115

	* A check in of changes that won't affect the skins stuff, as the 
	  directory (html_wrap) doesn't exist in that branch

	* $GALLERY_BASEDIR security added.

	* Validation links added to album and photo page, and modified in 
	  albums.php.

	* $ Ids added.

	* ALT tags added

2003-09-30  Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b114

	* Reverted back to +profile '*' when using ImageMagick.  The way
	  we "fixed" the problem with wasn't working and was just making
	  thumbnails extremely large.

2003-09-30  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b113

	* Added an <a name="image"></a> link to view_photo.php directly above
	  the image. (RFE #560423)

	* Removed some short PHP tags. ('<?' ---> '<?php')

	* Grammar re-work of Config. Wizard. Translation updates should