@@ -1,3 +1,9 @@
+2003-10-03  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b120
+
+	* Bugfix: Available Languages were detect correctly when not in config
+
+	* Bugfix: Available Languages were not saved correct in Config
+
 2003-10-03  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b119
 
 	* CHANGE: Position of .po files changed,
